# webkit-wp8

./: .gitattributes  .gitignore  BUILDING.txt  CMakeLists.txt
Source/: CMakeLists.txt
Source/JavaScriptCore/: CMakeLists.txt  JavaScriptCore_API.patch  PlatformAndroid.cmake  README.txt  jsc.cpp
Source/JavaScriptCore/API/: Foo.h  Foo.mm  FooOO.cpp  FooOO.h  JSBase.h  JSContextXRef.cpp  JSContextXRef.h  JSManagedValueRef.cpp  JSManagedValueRef.h  JSManagedValueXRef.cpp  JSManagedValueXRef.h  JSVMWrapperCacheXRef.cpp  JSVMWrapperCacheXRef.h  JSValueXRef.cpp  JSValueXRef.h  JSVirtualMachineRef.cpp  JSVirtualMachineRef.h  JSVirtualMachineRefPrivate.h  JSVirtualMachineXPrivateRef.h  JSVirtualMachineXRef.cpp  JSVirtualMachineXRef.h  JavaScriptCoreX.h
Source/JavaScriptCore/API/API.xcodeproj/: project.pbxproj
Source/JavaScriptCore/API/java/: README.md  build.gradle
Source/JavaScriptCore/API/tests/: FooTests.mm  JSContextXTests.mm  JSVirtualMachineXTests.mm  ObjectiveCAPITests.mm  ParentObject.h  ParentObject.m  TestObject.h  TestObject.m  TextXYZ.h  TextXYZ.m  TinyDOMNode.h  TinyDOMNode.m
Source/JavaScriptCore/ForwardingHeaders/JavaScriptCore/: JSBase.h
Source/JavaScriptCore/JavaScriptCore-WP8.vxcproj/: JavaScriptCore.sln  JavaScriptCore.vcxproj  JavaScriptCoreGenerated.vcxproj  copy-files.cmd
Source/JavaScriptCore/JavaScriptCore-WP81.vxcproj/: JavaScriptCore.sln  JavaScriptCore.vcxproj  JavaScriptCore.vcxproj.filters  JavaScriptCoreGenerated.props  JavaScriptCoreGenerated.vcxproj  JavaScriptCoreGenerated.vcxproj.filters  README.md
Source/JavaScriptCore/JavaScriptCore-Win8.vxcproj/: JavaScriptCore.sln  ReadMe.md
Source/JavaScriptCore/JavaScriptCore-Win8.vxcproj/TestRunner/: App.xaml  MainPage.xaml.cs  Package.appxmanifest  TestRunner.csproj
Source/JavaScriptCore/JavaScriptCore-Win8.vxcproj/TestRunnerComponent/: TestRunnerComponent.cpp  TestRunnerComponent.vcxproj
Source/JavaScriptCore/JavaScriptCore-Win81.vxcproj/: JavaScriptCore.sln  JavaScriptCore.vcxproj  JavaScriptCoreGenerated.make  JavaScriptCoreGenerated.vcxproj  ReadMe.md  build-generated-files.sh  copy-files.cmd  dllmain.cpp
Source/JavaScriptCore/JavaScriptCore-Win81.vxcproj/TestRunner/: App.xaml.cs  ConfigurationDialog.xaml  ConfigurationDialog.xaml.cs  MainPage.xaml  MainPage.xaml.cs  (+3 more)
Source/JavaScriptCore/JavaScriptCore.xcodeproj/: project.pbxproj
Source/JavaScriptCore/JavaScriptCore.xcworkspace/: contents.xcworkspacedata
Source/JavaScriptCore/JavaScriptCoreComponent/: JSTextBlock.cpp  JSTextBlock.h  JavaScriptCoreComponent.cpp  JavaScriptCoreComponent.h  JavaScriptCoreComponent.vcxproj  JavaScriptCoreComponent.vcxproj.filters
Source/JavaScriptCore/NativeApp/: CubeRenderer.cpp  NativeApp.cpp  NativeApp.h  NativeApp.vcxproj  NativeApp.vcxproj.filters  WMAppManifest.xml
Source/JavaScriptCore/TestRunner/: App.xaml  App.xaml.cs  ConfigurationPopup.xaml  ConfigurationPopup.xaml.cs  LocalizedStrings.cs  MainPage.xaml  MainPage.xaml.cs  TestRunner.csproj  TestRunnerWP81.csproj
Source/JavaScriptCore/TestRunnerComponent/: TestRunnerComponent.cpp  TestRunnerComponent.vcxproj  TestRunnerComponent.vcxproj.filters  TestRunnerComponentWP81.vcxproj
Source/JavaScriptCore/XAMLJavaScriptCommunicationExample/: MainPage.xaml  MainPage.xaml.cs  XAMLJavaScriptCommunicationExample.csproj
Source/JavaScriptCore/assembler/: MacroAssemblerARM.cpp
Source/JavaScriptCore/dfg/: DFGDriver.h
Source/JavaScriptCore/docs/: DiagramGlossary.graffle  JSAPIWrapperObject.graffle  JSContext.graffle  JSManagedValue.graffle  JSValue.graffle  JSVirtualMachine.graffle  JSWeakObjectMapRef.graffle  JSWrapperMap.graffle  JavaScriptCore.graffle  NOTES.txt  NSHipster_NSHashTable_and_NSMapTable.webarchive  ObjCCallbackFunction.graffle  ObjcRuntimeExtras.graffle
Source/JavaScriptCore/ftl/: FTLExitThunkGenerator.cpp
Source/JavaScriptCore/heap/: MarkedSpace.cpp
Source/JavaScriptCore/parser/: Lexer.cpp
Source/JavaScriptCore/runtime/: MathObject.cpp  Options.h  VM.h
Source/JavaScriptCore/test262/common/source/Logger/: CMakeLists.txt  Doxygen.h  README.txt
Source/JavaScriptCore/test262/common/source/Logger/CustomAdapterExamples/AndroidLog/: LoggerAdapter__android_log.c  LoggerAdapter__android_log.h
Source/JavaScriptCore/test262/common/source/Logger/CustomAdapterExamples/NSLog/: LoggerAdapter_NSLog.h  LoggerAdapter_NSLog.m
Source/JavaScriptCore/test262/common/source/Logger/clogger/: CMakeLists.txt  Logger.c  Logger.h  LoggerPrimitives.c  LoggerPrimitives.h
Source/JavaScriptCore/test262/common/source/Logger/cpplogger/: CMakeLists.txt  Logger.cpp  Logger.hpp
Source/JavaScriptCore/test262/common/source/Logger/doc/: Doxyfile.in
Source/JavaScriptCore/test262/common/source/Logger/lualogger/: CMakeLists.txt  LoggerLua.c  LoggerLua.h
Source/JavaScriptCore/test262/common/source/Logger/objclogger/: CMakeLists.txt  LoggerObjC.h  LoggerObjC.m
Source/JavaScriptCore/test262/common/source/Logger/socketlogger/: CMakeLists.txt  LoggerSocket.c
Source/JavaScriptCore/test262/common/source/Logger/test/: CMakeLists.txt  testcperformance1.c  testloggerc.c  testloggerc_socket.c  testloggercpp.cpp  testloggerobjc.m  testthreadscpp.cpp
Source/JavaScriptCore/test262/common/source/Logger/timestamp/: TimeStamp.c  TimeStamp.h
Source/JavaScriptCore/tools/: CodeProfiling.cpp
Source/WTF/: GNUmakefile.list.am  config.h
Source/WTF/WTF-win8/: WTF-win8.vcxproj
Source/WTF/WTF-wp8/: WTF-wp8.vcxproj
Source/WTF/WTF-wp81/: WTF-wp8.vcxproj  WTF-wp8.vcxproj.filters
Source/WTF/wtf/: Assertions.cpp  CMakeLists.txt  CurrentTime.cpp  MathExtras.h  Platform.h  StdLibExtras.h  TCSpinLock.h  ThreadSpecific.h  ThreadSpecificWinPhone.cpp  ThreadingPrimitives.h  ThreadingStdThread.cpp
Source/WebCore/crypto/: SubtleCrypto.idl
Source/WebCore/inspector/: InjectedScriptHost.idl
Source/WebCore/platform/: MediaSample.h
Source/WebKit2/UIProcess/: DrawingAreaProxyImpl.cpp  DrawingAreaProxyImpl.h
Source/cmake/: FindICU.cmake  OptionsAndroid.cmake  OptionsCommon.cmake  WebKitHelpers.cmake  WebKitMacros.cmake
Tools/TestWebKitAPI/: GNUmakefile.am
(+269 files in other folders)
